--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/denimar/deni-react-treeview",
   "devDependencies": {
+    "async": "^3.2.6",
     "autoprefixer": "^7.1.2",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
@@ -49,13 +50,12 @@
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
+    "css-loader": "^7.1.2",
     "cssnano": "^3.10.0",
     "eslint": "3.19.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.5.3",
     "phantomjs": "^2.1.7",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.6.0",
@@ -63,10 +63,12 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "sass-loader": "^6.0.6",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
     "style-loader": "^0.19.1",
     "watch": "^1.0.2",
-    "webpack": "^3.10.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
